--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "@testing-library/user-event": "^13.5.0",
     "@uiw/react-md-editor": "^3.14.1",
     "axios": "^0.27.2",
+    "history": "^5.3.0",
+    "install": "^0.13.0",
     "mermaid": "^9.1.1",
+    "multiselect-react-dropdown": "^2.0.22",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
     "react-markdown": "^8.0.3",
+    "react-query": "^3.39.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-syntax-highlighter": "^15.5.0",
