--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-query": "^3.39.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-switch": "^7.0.0",
     "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^9.0.4",
     "reactjs-social-login": "^2.1.0",
