--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uiw/react-markdown-preview": "^4.0.17",
     "@uiw/react-md-editor": "^3.14.1",
     "axios": "^0.27.2",
     "history": "^5.3.0",
