--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "install": "^0.13.0",
     "mermaid": "^9.1.1",
     "multiselect-react-dropdown": "^2.0.22",
+    "node-polyfill-webpack-plugin": "^1.1.4",
+    "parse-numeric-range": "^1.3.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
@@ -25,6 +27,8 @@
     "react-toastify": "^9.0.4",
     "reactjs-social-login": "^2.1.0",
     "rehype-sanitize": "^5.0.1",
+    "remark-frontmatter": "^4.0.1",
+    "remark-typescript": "^0.4.1",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
