--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
+    "react-loader-spinner": "^5.1.5",
     "react-markdown": "^8.0.3",
     "react-paginate": "^8.1.3",
     "react-query": "^3.39.1",
