--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.27.2",
     "history": "^5.3.0",
     "install": "^0.13.0",
+    "jwt-decode": "^3.1.2",
     "mermaid": "^9.1.1",
     "multiselect-react-dropdown": "^2.0.22",
     "node-polyfill-webpack-plugin": "^1.1.4",
