--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@uiw/react-markdown-preview": "^4.0.17",
     "@uiw/react-md-editor": "^3.14.1",
     "axios": "^0.27.2",
+    "customize-cra": "^1.0.0",
     "history": "^5.3.0",
     "install": "^0.13.0",
     "jwt-decode": "^3.1.2",
@@ -18,6 +19,7 @@
     "node-polyfill-webpack-plugin": "^1.1.4",
     "parse-numeric-range": "^1.3.0",
     "react": "^18.1.0",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
     "react-loader-spinner": "^5.1.5",
@@ -37,10 +39,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": [
@@ -59,5 +61,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-plugin-module-resolver": "^4.1.0"
   }
 }
